# infinito-sphinx

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  conf.py  docker-compose.yml  main.py  pyproject.toml  requirements.yml
.github/workflows/: ci-publish.yml
generators/: readmes.py
src/infinito_docs/: __main__.py  conf.py
src/infinito_docs/generators/: ansible_roles.py  index.py  readmes.py  yaml_index.py
src/infinito_docs/templates/: logo.html
tests/unit/test_infinito_docs/: test_conf.py  test_init.py  test_main_module.py
tests/unit/test_infinito_docs/extensions/: test_local_file_headings.py  test_local_subfolders.py  test_markdown_include.py  test_nav_utils.py  test_roles_overview.py
tests/unit/test_infinito_docs/generators/: test_ansible_roles.py  test_index.py  test_readmes.py  test_yaml_index.py
